# SpaceBattle

./: README.md
Client/: CMakeLists.txt
Client/GUI/: ConnexionPage.cpp  CreateGame.cpp  MainMenu.cpp
Client/include/: Case.h  Client.h  ConnexionPage.h  CreateGame.h  Game.h  MainMenu.h  info_game.h
Client/res/images/: background.xcf
Client/src/: Case.cpp  Client.cpp  Game.cpp  info_game.cpp  main.cpp
server/includes/: BattleSpaceServer.hpp  Client.hpp  Error.h  Game.hpp  IClientSocket.hpp  IServerSocket.hpp  TcpClient.hpp  TcpServer.hpp
server/includes/Command/: Bateau.hpp  ICommand.hpp  Join.hpp  Msg.hpp  New.hpp  Pseudon.hpp  Timer.hpp  Tir.hpp
